# resume

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  README.md  main.tex  pyproject.toml  requirements.txt  run_app.py  test_ai_chatbot.py
.streamlit/: config.toml
scripts/: commit.sh
src/: ai_chatbot.py  app.py  chatbot.py  chatbot_floating.py  contact.py  data.py  education.py  experience.py  home.py  projects.py  skills.py  utils.py
